welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:20: error: not found: value i
  for (j<- i to 6){
           ^